--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <version>0.9.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
